// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`clientHealthAlertEmail > matches the snapshot for a critical status-down alert 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <title>Client health: Acme</title>
  </head>
  <body style="margin:0;padding:0;background:#0f1629;color:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;font-size:1px;line-height:1px;color:#0f1629;">1 site is down</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#0f1629;padding:32px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;background:#171b4e;border:1px solid #2d356b;border-radius:12px;padding:40px;">
            <tr>
              <td>
                <div style="font-size:20px;font-weight:700;color:#f59e0b;letter-spacing:0.5px;margin-bottom:24px;">LAST REV</div>
                
        <h1 style="margin:0 0 8px;font-size:20px;line-height:1.3;">
          CRITICAL &mdash; Acme
        </h1>
        <p style="margin:0 0 16px;font-size:14px;line-height:1.6;">1 site is down</p>
        <p style="margin:0 0 16px;font-size:13px;line-height:1.5;color:#a1a8c4;">Score: <strong style="color:#f8fafc;">60</strong> (-25)</p>
        
        <h2 style="margin:24px 0 12px;font-size:14px;font-weight:600;text-transform:uppercase;letter-spacing:0.05em;color:#a1a8c4;">Affected sites</h2>
        <ul style="margin:0 0 16px;padding:0 0 0 18px;"><li style="margin:0 0 8px;font-size:13px;line-height:1.5;"><strong>https://acme.example/a</strong> &mdash; <a href="https://acme.example/a" style="color:#a1a8c4;">https://acme.example/a</a><br /><span style="color:#a1a8c4;">down</span></li></ul>
        <p style="margin:24px 0 0;font-size:13px;line-height:1.5;"><a href="https://lastrev.com/client-health" style="color:#f59e0b;">View dashboard</a></p>
      
                <hr style="border:none;border-top:1px solid #2d356b;margin:32px 0 16px;" />
                <p style="color:#a1a8c4;font-size:12px;line-height:1.5;margin:0;">
                  Last Rev — 2026
                </p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`clientHealthAlertEmail > matches the snapshot for a warning ssl-expiring alert 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <title>Client health: Acme</title>
  </head>
  <body style="margin:0;padding:0;background:#0f1629;color:#f8fafc;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Helvetica,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;font-size:1px;line-height:1px;color:#0f1629;">1 certificate expiring within 14 days for Acme.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#0f1629;padding:32px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;background:#171b4e;border:1px solid #2d356b;border-radius:12px;padding:40px;">
            <tr>
              <td>
                <div style="font-size:20px;font-weight:700;color:#f59e0b;letter-spacing:0.5px;margin-bottom:24px;">LAST REV</div>
                
        <h1 style="margin:0 0 8px;font-size:20px;line-height:1.3;">
          WARNING &mdash; Acme
        </h1>
        <p style="margin:0 0 16px;font-size:14px;line-height:1.6;">1 certificate expiring within 14 days for Acme.</p>
        
        
        <h2 style="margin:24px 0 12px;font-size:14px;font-weight:600;text-transform:uppercase;letter-spacing:0.05em;color:#a1a8c4;">Affected sites</h2>
        <ul style="margin:0 0 16px;padding:0 0 0 18px;"><li style="margin:0 0 8px;font-size:13px;line-height:1.5;"><strong>https://acme.example/a</strong> &mdash; <a href="https://acme.example/a" style="color:#a1a8c4;">https://acme.example/a</a><br /><span style="color:#a1a8c4;">expires 2026-05-14</span></li></ul>
        <p style="margin:24px 0 0;font-size:13px;line-height:1.5;"><a href="https://command-center.apps.lastrev.com/clients/c-123" style="color:#f59e0b;">View dashboard</a></p>
      
                <hr style="border:none;border-top:1px solid #2d356b;margin:32px 0 16px;" />
                <p style="color:#a1a8c4;font-size:12px;line-height:1.5;margin:0;">
                  Last Rev — 2026
                </p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;
